--- a/public/index.html
+++ b/public/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Express React Webpack Babel Setup</title>
+    <title>Salestrekker interview task</title>
   </head>
   <body>
     <div id="app"></div>
